<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red1"
    android:foregroundTint="@color/grey"
    tools:context=".MakeAlertActivity"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="86dp">

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Timestamp"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAlert"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewRangeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/range"
        android:textColor="@color/purple2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="@color/purple2"
        android:ems="10"
        android:hint="@string/rangeSmall"
        android:inputType="number"
        android:textColor="@color/purple1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNotify"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:background="@color/red2"
        android:onClick="sendNotification"
        android:text="@string/notify"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonIgnore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:rippleColor="@color/purple2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonIgnore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:onClick="ignore"
        android:text="@string/ignore"
        android:textColor="@color/purple2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple2"
        android:backgroundTint="@color/purple2"
        android:onClick="delete"
        android:text="@string/resolve"
        android:textColor="@color/red1"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toEndOf="@+id/imageViewAlert"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewAlert"
        android:layout_width="144dp"
        android:layout_height="118dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_warning_24_yellow" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/emergencyLevel"
        android:textColor="@color/purple2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewELevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/emergencyType"
        android:textColor="@color/purple2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewEType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewEType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="flood"
        android:textColor="@color/purple2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <TextView
        android:id="@+id/textViewELevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="2"
        android:textColor="@color/purple2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/emergencyLocation"
        android:textColor="@color/purple2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewELoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewELoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxx"
        android:textColor="@color/purple2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <ImageView
        android:id="@+id/imageViewDisaster"
        android:layout_width="130dp"
        android:layout_height="132dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewRangeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="194dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/grey"
        android:drawableTint="@color/grey"
        android:ems="10"
        android:enabled="true"
        android:gravity="start|top"
        android:hint="@string/commentsLabel"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:text="sdfsdfsdgfhsdjfhsdkfsdkfkdsfhsdkfdshjfdsjfvfdsjgfvdsgfdsvfghdsvfgf"
        android:textColor="@color/grey2"
        app:layout_constraintBottom_toTopOf="@+id/imageViewDisaster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarImage"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textViewRangeText"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDisaster"
        app:layout_constraintStart_toStartOf="@+id/imageViewDisaster"
        app:layout_constraintTop_toTopOf="@+id/imageViewDisaster" />

</androidx.constraintlayout.widget.ConstraintLayout>